it/snapshots/cli__project_init_rejects_invalid_existing_config_without_writing.snap
---
source: it/cli.rs
expression: output
---
CommandOutput {
    code: Some(
        1,
    ),
    stdout: "",
    stderr: "error: unknown Project config key `unexpected`\n",
}
