it/snapshots/cli__project_init_requires_yes_or_print_when_non_interactive.snap
---
source: it/cli.rs
expression: output
---
CommandOutput {
    code: Some(
        1,
    ),
    stdout: "",
    stderr: "error: pv init requires an interactive terminal; rerun with --yes or --print.\n",
}
