it/snapshots/cli__project_link_accepts_relative_path_arguments.snap
---
source: it/cli.rs
expression: "(link, list)"
---
(
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Linked https://acme-store.test -> <tempdir>/parent/Acme Store\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Project  Mode  PHP  Status  Resources  Env  Path\nacme-store.test  served  8.4  unknown  0  none  <tempdir>/parent/Acme Store\n",
        stderr: "",
    },
)
