it/snapshots/cli__project_list_reports_env_observed_status.snap
---
source: it/cli.rs
expression: "(link, list_pending, list_rendered, list_warning, list_failed)"
---
(
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Linked https://acme-store.test -> <tempdir>/Acme Store\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Project  Mode  PHP  Status  Resources  Env  Path\nacme-store.test  served  default  unknown  0  pending  <tempdir>/Acme Store\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Project  Mode  PHP  Status  Resources  Env  Path\nacme-store.test  served  default  unknown  0  rendered  <tempdir>/Acme Store\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Project  Mode  PHP  Status  Resources  Env  Path\nacme-store.test  served  default  unknown  0  warning  <tempdir>/Acme Store\n  env: warning: APP_URL already exists outside the PV block\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Project  Mode  PHP  Status  Resources  Env  Path\nacme-store.test  served  default  unknown  0  failed  <tempdir>/Acme Store\n  env: failed: Project config error: duplicate rendered Project env key `DATABASE_URL`\n",
        stderr: "",
    },
)
