it/snapshots/cli__project_list_reports_ignored_php_extensions.snap
---
source: it/cli.rs
expression: "(link, list)"
---
(
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Linked https://acme-store.test -> <tempdir>/Acme Store\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Project  Mode  PHP  Status  Resources  Env  Path\nacme-store.test  served  default  unknown  0  warning  <tempdir>/Acme Store\n  env: warning: ignored unsupported PHP extension `missing`; ignored unsupported PHP extension `typo`\n",
        stderr: "",
    },
)
